1040.com (archived on 2017-04-19)
{
  "alexa_rank": 79170,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance",
  "char_count": 10194,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.79,
  "homepage_snapshot_redirected_domain": "1040.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170328132121id_/https://www.1040.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170328132121id_/http%3A//1040.com",
  "interval": "2017_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "1040.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170419091710id_/https%3A//www.1040.com/privacy",
  "policy_title": "Privacy \u2022 1040.com \u2013 File Your Taxes Online",
  "policy_url": "1040.com/privacy",
  "sha1": "23b931e176ff30c54ff5e1248efce90220adee00",
  "simhash": 1390310959759069391,
  "simhash_updated": true,
  "site_hostname": "1040.com",
  "site_url": "http://1040.com",
  "smog": 13.13,
  "strict_updated": true,
  "timestamp": "20170419091710",
  "word_count": 1634,
  "year": 2017
}

--- a/1/10/104/1040.com.md
+++ b/1/10/104/1040.com.md
@@ -1,16 +1,16 @@
-> *The following text is extracted and transformed from the 1040.com privacy policy that was archived on 2016-10-26. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20161026233016id_/https%3A//www.1040.com/privacy) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 1040.com privacy policy that was archived on 2017-04-19. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20170419091710id_/https%3A//www.1040.com/privacy) for the most accurate reproduction.*
 
 # Privacy • 1040.com – File Your Taxes Online
 
-Effective on May 17, 2016
+Effective on February 2, 2017
 
-This privacy policy applies to www.1040.com owned and operated by Drake Software. This privacy policy describes how Drake Software collects and uses the personal information you provide on our Web site: [www.1040.com](https://web.archive.org/) . It also describes the choices available to you regarding our use of your personal information and how you can access and update this information.
+This privacy policy applies to www.1040.com owned and operated by Drake Software. This privacy policy describes how Drake Software collects and uses the personal information you provide on our Web site: [www.1040.com](https://web.archive.org/) . It also describes the choices available to you regarding our use of your personal information and how you can access and update this information. 
 
-**TRUSTe**
+This Privacy Policy covers our collection, use and disclosure of information we collect through our service. The use of information collected through our service shall be limited to the purpose of providing the service for which the Client has engaged
 
-Drake Software has received TRUSTe's Privacy Seal signifying that this privacy policy and our practices have been reviewed for compliance with the TRUSTe program viewable on the validation page available by clicking the TRUSTe seal. The TRUSTe program does not cover information that may be collected through downloadable software. The TRUSTe program covers only information that is collected through the Web site, www.1040.com, and the collection, use and disclosure of information we collect through our service. The use of information collected through our sevice shall be limited to the purpose of providing the service for which the Client has engaged Drake Software.
+If you have an unresolved privacy or data use concern that we have not addressed satisfactorily, please contact our U.S.-based third party dispute resolution provider (free of charge) at
 
-If you have an unresolved privacy or data use concern that we have not addressed satisfactorily, please contact TRUSTe at <https://feedback-form.truste.com/watchdog/request>.
+<https://feedback-form.truste.com/watchdog/request>.
 
 [Collection and Use](https://web.archive.org/privacy#a1) | [Information Sharing](https://web.archive.org/privacy#a2) | [Tracking Technologies](https://web.archive.org/privacy#a3) | How We Respond To Do Not Track Requests | [Security](https://web.archive.org/privacy#a4) | [Additional Info](https://web.archive.org/privacy#a5) | [Contact Info](https://web.archive.org/privacy#a6)
 
@@ -46,6 +46,8 @@ We use this information to
 
 
 
+We collect information under the direction of its Clients, and has no direct relationship with the individuals whose personal data it processes. If you are a customer of one of our Clients and would no longer like to be contacted by one of our Clients that use our service, please contact the Client that you interact with directly.  We may transfer personal information to companies that help us provide our service. Transfers to subsequent third parties are covered by the service agreements with our Clients.
+
 **Choice/Opt-Out**
 
 You may choose to stop receiving our newsletter or marketing emails by following the unsubscribe instructions included in these emails or you can contact us at support@1040.com.
@@ -59,6 +61,8 @@ If you provide us personal information about others, or if others give us your i
 We will share your personal information with third parties only in the ways that are described in this privacy policy . We do not sell your personal information to third parties.
 
 We may provide your personal information to companies that provide services to help us with our business activities such as a credit card processing company to bill you for services and an email service provider to send out emails on our behalf. These companies are authorized to use your personal information _only as necessary to provide_ these services to us.
+
+In certain situations, Drake Software may be required to disclose personal data in response to lawful requests by public authorities, including to meet national security or law enforcement requirements. 
 
 We may also disclose your personal information
 
@@ -111,7 +115,7 @@ If you have any questions about security on our Web site, you can contact us at 
 
 **Correcting and Updating Your Personal Information**
 
-To review and update your personal information to ensure it is accurate, or to request deletion of your personal information, you may log into your account and make the appropriate changes in your account management center or you may contact us at [support@1040.com](mailto:support@1040.com). We will respond to your request within 30 days.
+Upon request Drake Software will provide you with information about whether we hold any of your personal information. To review and update your personal information to ensure it is accurate, or to request deletion of your personal information, you may log into your account and make the appropriate changes in your account management center or you may contact us at [support@1040.com](mailto:support@1040.com). Drake Software acknowledges that you have the right to access your personal information. Drake Software has no direct relationship with the individuals whose personal data it processes. An individual who seeks access, or who seeks to correct, amend, or delete inaccurate data should direct their query to the Drake Software’s Client (the data controller). We will respond to your request within 30 days.
 
 We will retain your information for as long as your account is active or as needed to provide you services. If you wish to cancel your account or request that we no longer use your information to provide you services contact us at the email above. We will retain and use your information as necessary to comply with our legal obligations, resolve disputes, and enforce our agreements.
 
