999gag.com (archived on 2017-04-24)
{
  "alexa_rank": 958078,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 3969,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.25,
  "homepage_snapshot_redirected_domain": "999gag.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170410224742id_/http://999gag.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170410224742id_/http%3A//999gag.com",
  "interval": "2017_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "999gag.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170424071241id_/http%3A//999gag.com/privacy",
  "policy_title": "Privacy Policy - 999gag.com",
  "policy_url": "999gag.com/privacy",
  "sha1": "3d4defb9c4e7b072f8254a94ad2e4b114616487d",
  "simhash": 10988231920147431931,
  "simhash_updated": false,
  "site_hostname": "999gag.com",
  "site_url": "http://999gag.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170424071241",
  "word_count": 641,
  "year": 2017
}

--- a/9/99/999/999gag.com.md
+++ b/9/99/999/999gag.com.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the 999gag.com privacy policy that was archived on 2016-12-19. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20161219101723id_/http%3A//www.999gag.com/privacy) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 999gag.com privacy policy that was archived on 2017-04-24. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20170424071241id_/http%3A//999gag.com/privacy) for the most accurate reproduction.*
 
 # Privacy Policy - 999gag.com
 
