--- a/1/12/123/123oye.com.md
+++ b/1/12/123/123oye.com.md
@@ -1,8 +1,6 @@
-> *The following text is extracted and transformed from the 123oye.com privacy policy that was archived on 2015-05-06. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20150506015049id_/http%3A//123oye.com/privacy-policy) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 123oye.com privacy policy that was archived on 2017-04-28. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20170428095742id_/http%3A//www.123oye.com/privacy-policy) for the most accurate reproduction.*
 
 # Privacy Policy - 123oye.com
-
-Privacy Policy
 
 Your Privacy is important to us. 123oye.com does not accept resumes and is a free information website but on some web pages it may ask you to fill up forms related to a product or service or publication or just information. Users should carefully read the content of that page before filling any form on 123oye.com
 
