--- a/p/pl/plr/plr365.com.md
+++ b/p/pl/plr/plr365.com.md
@@ -1,28 +1,28 @@
-> *The following text is extracted and transformed from the plr365.com privacy policy that was archived on 2016-06-09. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20160609100640id_/http%3A//www.plr365.com/privacy.htm) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the plr365.com privacy policy that was archived on 2017-06-03. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20170603004006id_/http%3A//plr365.com/privacy-policy) for the most accurate reproduction.*
 
-# PLR365.com Privacy Policy
+# PLR365.com | Privacy Policy
 
-We collect information from you when you register on our site, place an order or subscribe to our newsletter. 
+**What information do we collect?**
+
+We collect information from you when you register on our site, place an order or subscribe to our newsletter.
 
 When ordering or registering on our site, as appropriate, you may be asked to enter your: name, e-mail address, mailing address or phone number. You may, however, visit our site anonymously.
 
-Google, as a third party vendor, uses cookies to serve ads on our site from time to time. Google's use of the DART cookie enables it to serve ads to users based on their visit to our site and other sites on the Internet. Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy.
-
 **What do we use your information for?**
 
-Any of the information we collect from you may be used in one of the following ways: 
+Any of the information we collect from you may be used in one of the following ways:
 
 To personalize your experience  
-(your information helps us to better respond to your individual needs)
+Your information helps us to better respond to your individual needs.
 
 To improve our website  
-(we continually strive to improve our website offerings based on the information and feedback we receive from you)
+We continually strive to improve our website offerings based on the information and feedback we receive from you.
 
 To improve customer service  
-(your information helps us to more effectively respond to your customer service requests and support needs)
+Your information helps us to more effectively respond to your customer service requests and support needs.
 
 To process transactions  
-Your information, whether public or private, will not be sold, exchanged, transferred, or given to any other company for any reason whatsoever, without your consent, other than for the express purpose of delivering the purchased product or service requested. 
+Your information, whether public or private, will not be sold, exchanged, transferred, or given to any other company for any reason whatsoever, without your consent, other than for the express purpose of delivering the purchased product or service requested.
 
 To administer a contest, promotion, survey or other site feature
 
@@ -44,11 +44,9 @@ After a transaction, your private information (credit cards, social security num
 
 **Do we use cookies?**
 
-Yes (Cookies are small files that a site or its service provider transfers to your computers hard drive through your Web browser (if you allow) that enables the sites or service providers systems to recognize your browser and capture and remember certain information
+Yes (Cookies are small files that a site or its service provider transfers to your computers hard drive through your Web browser (if you allow) that enables the sites or service providers systems to recognize your browser and capture and remember certain information.
 
-We use cookies to understand and save your preferences for future visits and .
-
-If you prefer, you can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies via your browser settings. Like most websites, if you turn your cookies off, some of our services may not function properly. However, you can still place orders by contacting customer service.
+We use cookies to understand and save your preferences for future visits. If you prefer, you can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies via your browser settings. Like most websites, if you turn your cookies off, some of our services may not function properly. However, you can still place orders by contacting customer service.
 
 **Do we disclose any information to outside parties?**
 
@@ -58,7 +56,7 @@ We do not sell, trade, or otherwise transfer to outside parties your personally 
 
 Occasionally, at our discretion, we may include or offer third party products or services on our website. These third party sites have separate and independent privacy policies. We therefore have no responsibility or liability for the content and activities of these linked sites. Nonetheless, we seek to protect the integrity of our site and welcome any feedback about these sites.
 
-**Childrens Online Privacy Protection Act Compliance**
+**Children’s Online Privacy Protection Act Compliance**
 
 We are in compliance with the requirements of COPPA (Childrens Online Privacy Protection Act), we do not collect any information from anyone under 13 years of age. Our website, products and services are all directed to people who are at least 13 years old or older.
 
@@ -68,4 +66,14 @@ This online privacy policy applies only to information collected through our web
 
 **Terms and Conditions**
 
-Please also visit our Terms and Conditions section establishing the use, disclaimers, and limitations of liability governing the use of our website at [ http://www.plr365.com/terms.htm](http://www.plr365.com/terms.htm "Terms")
+Please also visit our Terms and Conditions section establishing the use, disclaimers, and limitations of liability governing the use of our website at <http://www.plr365.com/terms/>
+
+**Your Consent**
+
+By using our site, you consent to our privacy policy.
+
+**Changes to our Privacy Policy**
+
+If we decide to change our privacy policy, we will post those changes on this page.
+
+This policy was last modified on 23/09/2014
