ck12.org (archived on 2017-06-03)
{
  "alexa_rank": 3500,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 19208,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.26,
  "homepage_snapshot_redirected_domain": "ck12.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170402181159id_/http://www.ck12.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170402181159id_/http%3A//ck12.org",
  "interval": "2017_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ck12info.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170603090106id_/https%3A//www.ck12info.org/about//technology-2/privacy-policy",
  "policy_title": "Privacy Policy | CK-12 Foundation",
  "policy_url": "ck12info.org/about//technology-2/privacy-policy",
  "sha1": "d570c38f641afa63c05d1217866f976230383836",
  "simhash": 3816072713612471805,
  "simhash_updated": false,
  "site_hostname": "ck12.org",
  "site_url": "http://ck12.org",
  "smog": 15.65,
  "strict_updated": false,
  "timestamp": "20170603090106",
  "word_count": 3221,
  "year": 2017
}

--- a/c/ck/ck1/ck12.org.md
+++ b/c/ck/ck1/ck12.org.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the ck12.org privacy policy that was archived on 2016-12-07. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20161207033510id_/https%3A//www.ck12info.org/about//technology-2/privacy-policy) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the ck12.org privacy policy that was archived on 2017-06-03. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20170603090106id_/https%3A//www.ck12info.org/about//technology-2/privacy-policy) for the most accurate reproduction.*
 
 # Privacy Policy | CK-12 Foundation
 
@@ -6,7 +6,7 @@ Please note that our Privacy Policy has been updated. Please [click here](https:
 
 **CK-12™ PRIVACY POLICY**  
 ****Effective as of August 1, 2008 (last updated June 21, 2016)  ****  
-This Privacy Policy constitutes an integral part of the Terms of Use for the CK-12 Platform (as defined in the [Terms of Use](https://www.ck12info.org/about/terms-of-use/ "Terms of Use")). Capitalized terms not otherwise defined herein are as defined in the Terms of Use.
+This Privacy Policy constitutes an integral part of the Terms of Use for the CK-12 Platform (as defined in the [Terms of Use](http://www.ck12info.org/about/terms-of-use/ "Terms of Use")). Capitalized terms not otherwise defined herein are as defined in the Terms of Use.
 
 CK-12 Foundation, a non-profit organization dedicated to free educational content (“CK-12” or “we”) respects your online privacy. The purpose of this Privacy Policy is to inform you regarding:  
 (1) what information we may collect from or about you, and how we collect such information;  
