ja606.co.uk (archived on 2017-06-06)
{
  "alexa_rank": 173580,
  "analysis_subcorpus": true,
  "categories": "sports",
  "char_count": 15010,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.66,
  "homepage_snapshot_redirected_domain": "ja606.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170319180317id_/http://www.ja606.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170319180317id_/http%3A//ja606.co.uk",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ja606.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606004122id_/http%3A//www.ja606.co.uk/pages/privacy",
  "policy_title": "Just Another 606 - Privacy Statement",
  "policy_url": "ja606.co.uk/pages/privacy",
  "sha1": "4ee1c608d493a114649441d23ec92abd6690bcd6",
  "simhash": 12274553945161848377,
  "simhash_updated": true,
  "site_hostname": "ja606.co.uk",
  "site_url": "http://ja606.co.uk",
  "smog": 16.65,
  "strict_updated": true,
  "timestamp": "20170606004122",
  "word_count": 2448,
  "year": 2017
}

--- a/j/ja/ja6/ja606.co.uk.md
+++ b/j/ja/ja6/ja606.co.uk.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the ja606.co.uk privacy policy that was archived on 2016-11-19. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20161119023328id_/http%3A//www.ja606.co.uk/pages/privacy) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the ja606.co.uk privacy policy that was archived on 2017-06-06. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20170606004122id_/http%3A//www.ja606.co.uk/pages/privacy) for the most accurate reproduction.*
 
 # Just Another 606 - Privacy Statement
 
@@ -20,7 +20,7 @@ The Operators may gather aggregate information, which refers to information your
 
 Every time you request or download a file from the web site, the Operators may store data about these events and your IP address in a log file. The Operators may use this information to analyze trends, administer the web site, track users' movements, and gather broad demographic information for aggregate use or for other business purposes.
 
-Our site may use a feature of your browser to set a "cookie" on your computer. Cookies are small packets of information that a web site's computer stores on your computer. The Operators's web sites can then read the cookies whenever you visit our site. We may use cookies in a number of ways, such as to save your password so you don't have to re-enter it each time you visit our site, to deliver content specific to your interests and to track the pages you've visited. These cookies allow us to use the information we collect to customize your experience so that your visit to our site is as relevant and as valuable to you as possible. In addition we we also serve display advertising from various providers, including Google AdSense. These adverts may appear as text adverts, static images or animated images. Google provides a [privacy policy for AdSense](http://www.google.com/intl/en-GB/policies/privacy/ads/) including an opt-out.
+Our site may use a feature of your browser to set a "cookie" on your computer. Cookies are small packets of information that a web site's computer stores on your computer. The Operators's web sites can then read the cookies whenever you visit our site. We may use cookies in a number of ways, such as to save your password so you don't have to re-enter it each time you visit our site, to deliver content specific to your interests and to track the pages you've visited. These cookies allow us to use the information we collect to customize your experience so that your visit to our site is as relevant and as valuable to you as possible. In addition we we also serve display advertising from various providers, including Google AdSense. These adverts may appear as text adverts, static images or animated images. Google provides a [privacy policy for AdSense](https://www.google.com/intl/en-GB/policies/privacy/ads/) including an opt-out.
 
 Most browser software can be set up to deal with cookies. You may modify your browser preference to provide you with choices relating to cookies. You have the choice to accept all cookies, to be notified when a cookie is set or to reject all cookies. If you choose to reject cookies, certain of the functions and conveniences of our web site may not work properly, and you may be unable to use those of the Operators's services that require registration in order to participate, or you will have to re-register each time you visit our site. Most browsers offer instructions on how to reset the browser to reject cookies in the "Help" section of the toolbar. We do not link non-personal information from cookies to personally identifiable information without your permission.
 
