our365.com (archived on 2017-08-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "education;health;shopping",
  "char_count": 21113,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.22,
  "homepage_snapshot_redirected_domain": "mom365.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170930045743id_/http://www.mom365.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170930053202id_/http%3A//our365.com",
  "interval": "2017_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "mom365.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170802144916id_/http%3A//www.mom365.com/aboutus/privacy",
  "policy_title": "Mom365 Privacy Policy | Mom365",
  "policy_url": "mom365.com/aboutus/privacy",
  "sha1": "7e9655081e29e36ba3deeb24cb1b03165a72542f",
  "simhash": 11180003252630577421,
  "simhash_updated": false,
  "site_hostname": "our365.com",
  "site_url": "http://our365.com",
  "smog": 14.93,
  "strict_updated": false,
  "timestamp": "20170802144916",
  "word_count": 3380,
  "year": 2017
}

--- a/o/ou/our/our365.com.md
+++ b/o/ou/our/our365.com.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the our365.com privacy policy that was archived on 2017-06-06. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20170606080150id_/http%3A//www.mom365.com/aboutus/privacy.aspx) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the our365.com privacy policy that was archived on 2017-08-02. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20170802144916id_/http%3A//www.mom365.com/aboutus/privacy) for the most accurate reproduction.*
 
 # Mom365 Privacy Policy | Mom365
 
