--- a/x/x2/x2./x2.to.md
+++ b/x/x2/x2./x2.to.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the x2.to privacy policy that was archived on 2016-10-31. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20161031102841id_/http%3A//www.x2.to/pages/privacy) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the x2.to privacy policy that was archived on 2017-08-12. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20170812040444id_/http%3A//www.x2.to/pages/privacy) for the most accurate reproduction.*
 
 # Privacy Policy
 
@@ -17,3 +17,5 @@ It is x2.to's policy to respect your privacy regarding any information we may co
 
 
 We are committed to conducting our business in accordance with these principles in order to ensure that the confidentiality of personal information is protected and maintained. x2.to may change this privacy policy from time to time at x2.to's sole discretion.
+
+yipee! an advertisement
